--- a/ps.css
+++ b/ps.css
@@ -484,12 +484,12 @@ body {
 
 /* Media queries for responsiveness */
 
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
     .net-div {
         display: grid;
         align-items: center;
         justify-content: center;
-        margin: 30px 470px 20px 470px;
+        margin: 30px 410px 20px 410px;
     }
 
     .net-div > h2 {
@@ -515,7 +515,7 @@ body {
 
     .upfile {
         padding: 20px 80px 20px 80px;
-        margin: 0px 400px 20px 440px;
+        margin: 0px 410px 20px 410px;
     }
 
     #upfiles {
@@ -525,7 +525,7 @@ body {
     
     .question {
         padding: 30px 50px 30px 50px;
-        margin: 40px 440px 40px 440px;
+        margin: 40px 410px 40px 410px;
     }
 
     .question > h1 {
@@ -546,7 +546,7 @@ body {
     }
 
     .comment-box {
-      margin: 0px 440px 20px 440px;
+      margin: 0px 410px 20px 410px;
     }
 
     .r-text > p {
