--- a/gen.css
+++ b/gen.css
@@ -87,6 +87,47 @@ body {
     font-size: 16px;
 }
 
+.loader-container {
+  position: relative;
+  width: 350px;
+  height: 13px;
+  margin: 30px 0 30px 50px;
+
+}
+
+.curved-rectangle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 20px;
+  z-index: 1;
+}
+
+.loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background: linear-gradient(to right, var(--button), var(--main-color));
+  border-radius: 20px;
+  z-index: 2;
+  animation: load 25s linear forwards;
+}
+
+@keyframes load {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+
 /* Login-popup starts  */
 
 .gen-wellback {
@@ -1285,4 +1326,5 @@ body {
     
     /* Login-popup ends  */
 }
+
 
